--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
-body {
-    background-color: lightblue;
+@import 'userMsg.css';
+@import '../../apps/Notes/assets/css/main.css';
+@import '../../apps/Books/assets/css/main.css';
+
+*{
+    box-sizing: border-box;
 }
