--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import 'userMsg.css';
 @import '../../apps/Notes/assets/css/main.css';
 @import '../../apps/Books/assets/css/main.css';
+@import '../../apps/Mail/assets/css/main.css';
 
 *{
     box-sizing: border-box;
