--- a/apps/Notes/assets/css/main.css
+++ b/apps/Notes/assets/css/main.css
@@ -16,3 +16,29 @@
 .make-note{
     display: flex;
 }
+/* MODAL */
+.modal-wrapper {
+    position: fixed;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
+
+.hide {
+    display: none;
+}
+
+.modal-content {
+    background: white;
+    max-width: 90%;
+    min-width: 80%;
+    min-height: 400px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+    position: relative;
+}
