--- a/apps/Mail/assets/css/helpers.css
+++ b/apps/Mail/assets/css/helpers.css
@@ -2,8 +2,58 @@
     display: flex;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
 ul {
     margin: 0;
     padding-inline-start: 10px;
     padding: 15px 10px;
+}
+
+.mr-1 {
+    margin-right: 10px
+}
+
+.mr-2 {
+    margin-right: 20px
+}
+
+.mr-3 {
+    margin-right: 30px
+}
+
+.mr-4 {
+    margin-right: 40px
+}
+
+.mr-5 {
+    margin-right: 50px
+}
+
+.ml-2 {
+    margin-left: 20px
+}
+
+.ml-3 {
+    margin-left: 30px
+}
+
+.ml-4 {
+    margin-left: 40px
+}
+
+.ml-5 {
+    margin-left: 50px
+}
+
+.btns-container {
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    margin-bottom: 20px;
+}
+
+.red {
+    color: red
 }
