--- a/apps/Mail/assets/css/main.css
+++ b/apps/Mail/assets/css/main.css
@@ -1,11 +1,18 @@
 @import './helpers.css';
+body {
+    background-color: hsl(187deg 19% 49% / 37%);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
 .mail-preview {
     padding-bottom: 5px;
     border-bottom: 1px solid rgb(196, 196, 196);
     cursor: pointer;
 }
 
-.mail-preview:hover {}
+.mail-preview:hover {
+    background-color: #eef4f5;
+}
 
 .mail-title {
     cursor: pointer;
@@ -15,6 +22,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.mail-filter {
+    display: flex;
+    flex-direction: column;
 }
 
 .mail-list {
@@ -48,10 +60,11 @@
     left: 40%;
 }
 
-.created-at{
+.created-at {
     position: absolute;
     left: 85%;
 }
+
 .star {
     color: white;
     background-image: url(https://www.gstatic.com/images/icons/material/system/1x/star_border_black_20dp.png);
@@ -66,8 +79,56 @@
     background-image: url(https://www.gstatic.com/images/icons/material/system/1x/star_googyellow500_20dp.png);
 }
 
-.editor-container{
+.filter-btn {
+    cursor: pointer;
+    padding: 30px 15px;
+    appearance: none;
+    background-color: #fafdfe;
+    color: #63676c;
+    border: none;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    font-size: 1rem;
+    transition: 0.2s;
+}
+
+.filter-btn:hover {
+    background-color: lightgray;
+    color: red;
+}
+
+.active-filter {
+    color: red;
+    border-bottom: 3px solid red;
+}
+
+.editor-container {
     display: flex;
     justify-content: right;
     width: 100%;
 }
+
+.compose-btn {
+    appearance: none;
+    background-color: #fafdfe;
+    color: #63676c;
+    border: none;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 15px;
+    margin: 10px;
+    transition: all 0.5s;
+}
+
+.compose-btn:hover{
+    box-shadow: 0px 2px 5px 0px gray;
+    color: red;
+    /* font-weight: bold; */
+    padding-right: 35px;
+}
+.compose-btn:hover::after{
+    content: '   ⟶';
+}
+
+
+
