--- a/apps/Mail/assets/css/helpers.css
+++ b/apps/Mail/assets/css/helpers.css
@@ -48,11 +48,44 @@ ul {
     margin-left: 50px
 }
 
-.btns-container {
-    border-right: 1px solid black;
-    border-left: 1px solid black;
+.mt-2{
+    margin-top: 20px;
+}
+ 
+.mt-3{
+    margin-top: 30px;
+}
+ 
+.mt-4{
+    margin-top: 40px;
+}
+ 
+.mt-5{
+    margin-top: 50px;
+}
+ 
+.mb-1{
+    margin-bottom: 10px;
+}
+
+.mb-2{
     margin-bottom: 20px;
 }
+
+.mb-3{
+    margin-bottom: 30px;
+}
+
+.mb-4{
+    margin-bottom: 40px;
+}
+
+.mb-5{
+    margin-bottom: 50px;
+}
+
+
+
 
 .red {
     color: red
