--- a/apps/Mail/assets/css/main.css
+++ b/apps/Mail/assets/css/main.css
@@ -1,6 +1,6 @@
 @import './helpers.css';
 body {
-    background-color: hsl(187deg 19% 49% / 37%);
+    background-color: #c5eaf9;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
@@ -12,6 +12,7 @@ body {
 
 .mail-preview:hover {
     background-color: #eef4f5;
+    box-shadow: inset 0px -2px 2px 0px gray;
 }
 
 .mail-title {
@@ -47,6 +48,9 @@ body {
 }
 
 .del-btn {
+    position: relative;
+    top: 10px;
+    right: 10px;
     cursor: pointer;
 }
 
@@ -64,20 +68,6 @@ body {
     left: 85%;
 }
 
-.star {
-    color: white;
-    background-image: url(https://www.gstatic.com/images/icons/material/system/1x/star_border_black_20dp.png);
-    background-size: 15px;
-    content: '';
-}
-
-.full-star {
-    color: white;
-    content: '';
-    background-size: 15px;
-    background-image: url(https://www.gstatic.com/images/icons/material/system/1x/star_googyellow500_20dp.png);
-}
-
 .filter-btn {
     cursor: pointer;
     padding: 30px 15px;
@@ -85,8 +75,6 @@ body {
     background-color: #fafdfe;
     color: #63676c;
     border: none;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
     font-size: 1rem;
     transition: 0.2s;
 }
@@ -106,8 +94,11 @@ body {
     width: 100%;
 }
 
-.compose-btn {
+.btns-container {
+    margin-bottom: 20px;
+}
 
+.compose-btn {
     appearance: none;
     background-color: #fafdfe;
     color: #63676c;
@@ -119,15 +110,49 @@ body {
     transition: all 0.5s;
 }
 
-.compose-btn:hover{
+.compose-btn:hover {
     box-shadow: 0px 2px 5px 0px gray;
     color: red;
     /* font-weight: bold; */
-    padding-right: 35px;
-}
-.compose-btn:hover::after{
-    content: '   ⟶';
+    padding-right: 27px;
 }
 
+.compose-btn:hover::after {
+    content: ' ⟶';
+}
 
+.send-mail {
+    min-height: 300px;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+}
 
+.new-mail-body {
+    margin: 20px;
+    height: 150px;
+    width: 400px;
+}
+
+.new-mail-subject {
+    width: 75%;
+    height: 25px;
+    border: none;
+    border-bottom: 1px solid black;
+    font-weight: bold;
+}
+
+.new-mail-subject:focus {
+    outline: none;
+}
+
+.user-info{
+    color: gray;
+    font-size: 0.9rem;
+}
+.mail-content{
+    flex-direction: column;
+    margin:15px;
+    justify-content: center;
+    align-content: center;
+}
