--- a/apps/Books/assets/css/userMsg.css
+++ b/apps/Books/assets/css/userMsg.css
@@ -24,7 +24,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
     position: absolute;
     top: 15px;
-    right: 15px;
+    right: 10%;
     border: 2px solid ;
 }
 
