--- a/apps/Notes/assets/css/main.css
+++ b/apps/Notes/assets/css/main.css
@@ -1,21 +1,22 @@
 @font-face {
     font-family: 'Armino';
-    src: url("../../../../assets/Fonts/Arimo/Arimo-Regular.ttf") ;
-}
-@font-face {
-    font-family: 'OpenSans';
-    src: url("../../../../assets/Fonts/Open_Sans/OpenSans-Regular.ttf") ;
+    src: url("../../../../assets/Fonts/Arimo/Arimo-Regular.ttf");
 }
 
-.note-list{
+@font-face {
+    font-family: 'OpenSans';
+    src: url("../../../../assets/Fonts/Open_Sans/OpenSans-Regular.ttf");
+}
+
+.note-list {
     list-style: none;
     display: grid;
     grid-gap: 15px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     padding: 1.5625rem 3.125rem 1.5625rem 3.125rem;
-
 }
-.note-card{
+
+.note-card {
     background-color: white;
     border-radius: 1rem;
     text-align: center;
@@ -23,14 +24,18 @@
     flex-direction: column;
     justify-content: space-between;
 }
-.note-li-btn{
+
+.note-li-btn {
     all: unset;
-  cursor: pointer;
+    cursor: pointer;
 }
-.make-note{
+
+.make-note {
     display: flex;
 }
+
 /* MODAL */
+
 .modal-wrapper {
     position: fixed;
     background: rgba(0, 0, 0, 0.5);
@@ -44,7 +49,6 @@
     z-index: 5;
 }
 
-
 .modal-content {
     background: white;
     max-width: 90%;
@@ -52,44 +56,48 @@
     min-height: 400px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
     display: block;
-
 }
-.modal-btn{
+
+.modal-btn {
     all: unset;
     cursor: pointer;
     display: flex;
     flex-direction: row-reverse;
+}
 
+.modal-btn div h3 {
+    font-family: Armino;
+}
 
+.txt-edit {
+    flex-wrap: wrap;
 }
-.modal-btn div h3{
-font-family:Armino;
-}
-.txt-edit{
-flex-wrap: wrap;
-}
-.note-image{
+
+.note-image {
     width: 50%;
-    height:250px;
+    height: 250px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0.5rem auto;
 }
-.note-image-list{
+
+.note-image-list {
     width: 90%;
-    height:90%;
+    height: 90%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding:3rem;
+    padding: 3rem;
     margin: 0 auto;
 }
-.todos-list{
+
+.todos-list {
     list-style: none;
     text-align: start;
 }
-.note-title{
+
+.note-title {
     display: block;
     text-align: center;
     font-family: ArMi;
@@ -97,56 +105,70 @@ flex-wrap: wrap;
 
 /* FILTER */
 
-.note-search{
-margin: 1rem;
-border-color: #bbacac;
-font-size: 1rem;
-padding: 0.5rem;
-border-width: 1px;
-border-radius: 0.5rem;
-border-style: double;
+.note-search {
+    margin: 1rem;
+    border-color: #bbacac;
+    font-size: 1rem;
+    padding: 0.5rem;
+    border-width: 1px;
+    border-radius: 0.5rem;
+    border-style: double;
 }
+
 /* MAKE NOTE */
+
 .make-note {
     display: flex;
-    width:14.52rem;
-    margin: 1rem ;
+    width: 14.52rem;
+    margin: 1rem;
     background-color: white;
     border-radius: 0.5rem;
     width: 80vw;
     justify-content: space-between;
 }
-.note-form{
-margin-left: 2rem;
-display: flex;
-}
-.note-textarea{
-    border-radius:10px !important;
 
-
+.note-form {
+    margin-left: 2rem;
+    display: flex;
 }
 
-.icons{
+.note-textarea {
+    border-radius: 10px !important;
+}
+
+.icons {
     margin: 0.3rem;
     cursor: pointer;
 }
-.icons:hover{
+
+.icons:hover {
     color: red !important;
 }
 
-/* HELPER */
-.display-none{
-    display: none ; 
+.active-icon {
+    color: red
 }
+
+/* HELPER */
+
+.display-none {
+    display: none;
+}
+
 .hide {
     display: none;
 }
-.input-text{
+
+.input-text {
     margin: 1rem;
-border-color: #bbacac;
-font-size: 1rem;
-padding: 0.5rem;
-border-width: 1px;
-border-radius: 0.5rem;
-border-style: double;
+    border-color: #bbacac;
+    font-size: 1rem;
+    padding: 0.5rem;
+    border-width: 1px;
+    border-radius: 0.5rem;
+    border-style: double;
 }
+
+/* .active-note {
+    color: red;
+} */
